force-app/main/default/objects/Loan__c/fields/Borrower__c.field-meta.xml
<CustomField>
    <fullName>Borrower__c</fullName>
    <label>Borrower</label>
    <referenceTo>Person__c</referenceTo>
    <relationshipLabel>Loans</relationshipLabel>
    <relationshipName>Loans</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>