force-app/main/default/objects/Loan__c/fields/End_Of_Rental__c.field-meta.xml
<CustomField>
    <fullName>End_Of_Rental__c</fullName>
    <label>End Of Rental</label>
    <required>true</required>
    <type>Date</type>
</CustomField>