force-app/main/default/objects/Loan__c/fields/Rental_Date__c.field-meta.xml
<CustomField>
    <fullName>Rental_Date__c</fullName>
    <label>Rental Date</label>
    <required>true</required>
    <type>Date</type>
</CustomField>