force-app/main/default/objects/Loan__c/validationRules/EndOfRentalLowerThanRentalDate.validationRule-meta.xml
<ValidationRule>
    <fullName>EndOfRentalLowerThanRentalDate</fullName>
    <active>true</active>
    <errorConditionFormula>End_Of_Rental__c  &lt;  Rental_Date__c</errorConditionFormula>
    <errorDisplayField>End_Of_Rental__c</errorDisplayField>
    <errorMessage>End Of Renta cannot be lower than Rental Date</errorMessage>
</ValidationRule>