force-app/main/default/objects/Loan__c/validationRules/PenaltyLowerThanZero.validationRule-meta.xml
<ValidationRule>
    <fullName>PenaltyLowerThanZero</fullName>
    <active>true</active>
    <errorConditionFormula>Penalty__c &lt; 0</errorConditionFormula>
    <errorDisplayField>Penalty__c</errorDisplayField>
    <errorMessage>The penalty cannot be lower than 0</errorMessage>
</ValidationRule>