force-app/main/default/objects/Loan__c/listViews/Loans.listView-meta.xml
<ListView>
    <fullName>Loans</fullName>
    <columns>Item__c</columns>
    <columns>Borrower__c</columns>
    <columns>Status__c</columns>
    <columns>Rental_Date__c</columns>
    <columns>End_Of_Rental__c</columns>
    <filterScope>Everything</filterScope>
    <label>Loans</label>
</ListView>