force-app/main/default/objects/Loan__c/listViews/Penalized_Loans.listView-meta.xml
<ListView>
    <fullName>Penalized_Loans</fullName>
    <columns>Item__c</columns>
    <columns>Borrower__c</columns>
    <columns>Penalty__c</columns>
    <columns>Rental_Date__c</columns>
    <columns>End_Of_Rental__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Penalty__c</field>
        <operation>greaterThan</operation>
        <value>0</value>
    </filters>
    <label>Penalized Loans</label>
</ListView>